--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>pl.spray.restdemo</groupId>
 	<artifactId>transit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>transit</name>
 	<description>Demo project for Spring Boot</description>
@@ -61,6 +61,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>${artifactId}</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
